<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:layout_marginBottom="15dp"
        android:id="@+id/sign_up_in_id"
        android:textStyle="bold"
        android:textSize="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name_hint"
        android:layout_marginBottom="10dp"
        android:id="@+id/username_id"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_no_hint"
        android:layout_marginBottom="10dp"
        android:id="@+id/phoneno_id"
        android:inputType="phone"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_marginBottom="10dp"
        android:id="@+id/password_id"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail_hint"
        android:layout_marginBottom="10dp"
        android:id="@+id/mailid_id"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_hint"
        android:layout_marginBottom="10dp"
        android:id="@+id/address_id"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up_button"
        android:id="@+id/signup_button_id"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/guest_button"
        android:id="@+id/guest_button_id"
        />

</LinearLayout>